# dawn

./: .buildinfo  .clang-tidy  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  afile.txt  basics.html  cmake-modules.html  coding.html  doxygen.html  genindex.html  gridtools.html  hir.html  hir_design.html  index.html  intro.html  isir.html  objects.inv  search.html  searchindex.js  sir.html  toolchain.html  usage.html
bundle/: CMakeLists.txt  PostInstall.cmake
bundle/cmake/: DawnCloneRepository.cmake
dawn/: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.html  README.md  firefox  pyproject.toml  setup.py  tox.ini
dawn/bundle/: CMakeLists.txt  PostInstall.cmake
dawn/bundle/cmake/: DawnCloneRepository.cmake
dawn/cmake/: AddBoost.cmake  AddProtobuf.cmake  AddSphinx.cmake  Addclang-format.cmake  DawnConfig.cmake.in  DawnMacros.cmake  DawnOptions.cmake  DawnProtobufGenerate.cmake  FetchCxxopts.cmake  FetchGoogleTest.cmake  FetchMagicEnum.cmake  FetchProtobuf.cmake  FindClang.cmake  FindLLVM.cmake  FindSphinx.cmake  GitVersionHash.cmake  HasUnstructuredDeps.cmake
dawn/cmake/modules/: DawnProtobufGenerate.cmake  Findccache.cmake
dawn/cmake/templates/: dawnConfig.cmake.in
dawn/docs/: CMakeLists.txt  Doxyfile.in  Mainpage.dox  basics.rst  cmake-modules-generate.cmake.in  conf.py.in  doxygen.rst  gridtools.rst  hir.rst  hir_design.rst  index.rst  intro.rst  isir.rst  parallel_model.md  parallel_model.rst  toolchain.rst
dawn/docs/_extension/: edit_on_github.py
dawn/docs/proto2cpp/: proto2cpp.py
dawn/docs/tutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.py  copy_stencil.cpp  copy_stencil.py  in.vtk  laplacian.sir  laplacian_driver  laplacian_driver.cpp  laplacian_stencil.cpp  laplacian_stencil_cxx_naive.cpp  laplacian_stencil_from_python.0.iir  laplacian_stencil_from_python.cpp  laplacian_stencil_from_python.sir  out.vtk  test.html
dawn/examples/: CMakeLists.txt
dawn/examples/cpp/: CMakeLists.txt
dawn/examples/python/: CMakeLists.txt  config.py.cmake  config.py.in  copy_stencil.py  generate_and_diff  global_index_pass_tester.py  global_index_stencil.py  hori_diff.py  hori_diff_stencil.py  new_copy_stencil.py  python-test.sh.in  run.sh  sparse_dimensions.py  test_python.cmake  tridiagonal_solve.py  tridiagonal_solve_stencil.py  tridiagonal_solve_unstructured.py  unstructured_stencil.py
dawn/examples/tutorial/: .gitignore  CMakeLists.txt  README.md  laplacian_driver.cpp  laplacian_stencil.cpp  laplacian_stencil.py
dawn/prototype/: .gitignore  AtlasCartesianWrapper.cpp  AtlasCartesianWrapper.h  AtlasFromNetcdf.cpp  AtlasFromNetcdf.h  README  TestAtlasFromNetcdf.cpp  atlasCopyDriver.cpp  atlasDiffusionDriver.cpp  atlasDiffusionDriverIntegrationTest.cpp  atlasDriver.cpp  atlasFieldNestedDriver.cpp  atlasGradientDriver.cpp  atlasICONDriver.cpp  atlasNestedDriver.cpp  atlasSimpleNestedDriver.cpp  atlasSparseDimensionDriver.cpp  atlasSparseDimensions.hpp  atlasVerifyer.h  atlasVerticalSumDriver.cpp  atlas_interface.hpp  driver.cpp  grid.cpp  grid.hpp  laplICONmylib_in.txt  laplICONmylib_out.txt  my_interface.hpp  my_scatter.m  my_stat.m  mylib.cpp  mylib.hpp  mylibCopyDriver.cpp  mylibDiffusionDriver.cpp  mylibDriver.cpp  mylibFieldNestedDriver.cpp  mylibGradientDriver.cpp  mylibIconLaplace.cpp  mylibIconLaplaceDriver.cpp  mylibSimpleNestedDriver.cpp  mylibSparseDimensionDriver.cpp  (+5 more)
dawn/prototype/reference/: global_indexing_cuda.cpp  global_indexing_naive.cpp  nonoverlapping_stencil.cpp  reference_Diffusion.hpp
dawn/python/: CMakeLists.txt
dawn/python/dawn/: config.py.in  sir.py  sir_printer.py  test_sir.py
dawn/scripts/: .gitignore  _dawn4py.cpp.in  make_pybind11_sources.py  update-header.py
dawn/scripts/check_modularization/: check_modularization.sh
dawn/scripts/cmake/: FindClangGenDeps.py
dawn/scripts/jenkins/: build.sh  env_daint.sh  env_kesch.sh
dawn/scripts/refactor/: _dawn4py.cpp.in  make_pybind11_sources.py
dawn/scripts/travis/: driver-install.sh  driver-test.sh  install.sh  logger.sh  test_travis.sh
dawn/src/: CMakeLists.txt
dawn/src/dawn/: CMakeLists.txt  Dawn.h  dawn-codegen.cpp  dawn-opt.cpp
dawn/src/dawn-c/: CMakeLists.txt  Compiler.cpp  Compiler.h  Dawn.h  ErrorHandling.h  Options.cpp  Options.h
dawn/src/dawn-python/: CMakeLists.txt  DawnPython.cpp
dawn/src/dawn4py/: .gitignore  CMakeLists.txt  README.md  __init__.py  _dawn4py.cpp  _version.py  _version.py.in  utils.py
dawn/src/driver-includes/: arrayAddons.hpp  benchmark.hpp  cuda_utils.cpp  cuda_utils.hpp  cuda_verify.cpp  cuda_verify.hpp  cxx11_warning.hpp  defs.hpp  domain.hpp  extent.hpp  gridtools_includes.hpp  halo.hpp  interface.hpp  math.hpp  param_wrapper.hpp  timer.hpp  (+12 more)
dawn/test/: CMakeLists.txt  README.md
gtclang/: .gitignore  .travis.yml.disabled  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
gtclang/bundle/: CMakeLists.txt
gtclang/cmake/: AddBoost.cmake  AddCXXCompilerFlagIfSuppported.cmake  AddClang.cmake  AddDawn.cmake  AddGridTools.cmake  AddOpenMP.cmake  AddPython3.cmake  AddThreads.cmake  Addbash.cmake  Addccache.cmake  Addclang-format.cmake  DawnCMakeInit.cmake  EnableCCache.cmake  FetchCxxopts.cmake  FetchGoogleTest.cmake  FindClang.cmake  FindLLVM.cmake  GTClangConfig.cmake.in  GTClangDefinitions.cmake  GTClangMacros.cmake  GTClangOptions.cmake  GTClangSetupCUDA.cmake
gtclang/examples/: CMakeLists.txt
gtclang/src/: CMakeLists.txt
gtclang/test/: CMakeLists.txt  README.md
python/: CMakeLists.txt
python/SIR/: __init__.py
python/dawn/: __init__.py  __init__.py.in  config.py.in  error.py  sir.py  sir_printer.py  test_sir.py
src/dawn/: CMakeLists.txt  Dawn.h
src/dawn-c/: CMakeLists.txt  Compiler.cpp  Compiler.h  ErrorHandling.cpp  ErrorHandling.h  Options.cpp  Options.h  TranslationUnit.cpp  TranslationUnit.h  Types.h
src/gsl/: CMakeLists.txt
test/integration-test/: CMakeLists.txt  GenerateInMemoryStencils.cpp  GenerateInMemoryStencils.h  RegenerateIIRMain.cpp  TestIIRDeserializer.cpp  TestMain.cpp
test/unit-test/: CMakeLists.txt
(+3827 files in other folders)
